--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CEO -->
     <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, festejo, artesanal">
-    <meta name="descpription" content="decoración personalizada, hecha a mano para cumpleaños">
+    <meta name="descpription" content="decoración personalizada hecha a mano para cumpleaños">
     <!-- TITULO PAGINA -->
     <title>AlegrArte</title>
     <!-- FONTS -->
