--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CEO -->
-    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, festejo, artesanal">
-    <meta name="descpription" content="decoración personalizada, hecha a mano para cumpleaños">
+    <meta name="keywords" content="whatsapp, contacto, numero, instagram, redes, consultas, piñatas, cumpleaños, niños, guirladas, rosetas, festejo, artesanal">
+    <meta name="descpription" content="Contáctate con nosotros">
     <!-- TITULO PAGINA -->
     <title>AlegrArte || Contacto</title>
     <!-- FONTS -->
