--- a/servicios.html
+++ b/servicios.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CEO -->
-    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, festejo, artesanal">
-    <meta name="descpription" content="decoración personalizada, hecha a mano para cumpleaños">
+    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, souvenirs, productos de decoracion, servicios de decoracion">
+    <meta name="descpription" content="servicios y productos de decoración personalizada para cumpleaños">
     <!-- TITULO PAGINA -->
     <title>AlegrArte || Servicios</title>
     <!-- FONTS -->
