--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CEO -->
-    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, festejo, artesanal">
-    <meta name="descpription" content="decoración personalizada, hecha a mano para cumpleaños">
+    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, festejo, preguntas, informacion, productos, servicios">
+    <meta name="descpription" content="Realizamos desde piñatas en distintos tamaños hasta combos que incluyen guirnaldas y rosetas">
     <!-- TITULO PAGINA -->
     <title>AlegrArte || Sobre Nosotros</title>
     <!-- FONTS -->
