--- a/galeria.html
+++ b/galeria.html
@@ -51,7 +51,8 @@
             <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.14 PM.jpeg" alt="foto2">
             <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.15 PM (1).jpeg" alt="foto3">
             <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.15 PM.jpeg" alt="foto4">
-            <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.16 PM (1).jpeg" alt="foto5">
+            <!-- <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.16 PM (1).jpeg" alt="foto5"> -->
+            <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.19 PM.jpeg" alt="foto11">
         </div>
         <div class="column">
             <img src="./galeria/WhatsApp Image 2022-06-29 at 12.45.16 PM.jpeg" alt="foto6">
