modifique etiqueta img

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="card" style="width: 25rem;">
-                <img src="imG/roseta-jirafa.jpeg" class="card-img-top" style="height: 25rem ; " alt="roseta">
+                <img src="img/roseta-jirafa.jpeg" class="card-img-top" style="height: 25rem ; " alt="roseta">
                 <div class="card-body">
                     <h5 class="card-title">ROSETAS</h5>
                     <p class="card-text">Sumale a tu decoracion rosetas, así será súper completa! Opciones de combos de
