--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CEO -->
-    <meta name="keywords" content="piñatas, cumpleaños, niños, guirladas, rosetas, souvenirs, productos de decoracion, servicios de decoracion">
+    <meta name="keywords"
+        content="piñatas, cumpleaños, niños, guirladas, rosetas, souvenirs, productos de decoracion, servicios de decoracion">
     <meta name="descpription" content="servicios y productos de decoración personalizada para cumpleaños">
     <!-- TITULO PAGINA -->
     <title>AlegrArte || Servicios</title>
@@ -55,36 +56,36 @@
             <div class="card" style="width: 25rem;">
                 <img src="img/piñata-mike.jpeg" class="card-img-top" style="height: 25rem ; " alt="piñata">
                 <div class="card-body">
-                    <h5 class="card-title">PIÑATAS</h5>
+                    <h5 class="card-title">PIÑATAS <br> $3000 </h5>
                     <p class="card-text">Las piñatas son nuestra especialidad, son únicas, hechas especialmente para
                         vos. Elegí tu diseño y tamaño como más te guste, y nosotros lo hacemos realidad. ¡Contanos tu
                         idea y listo!</p>
                     <a href="https://wa.me/+5491144074578?text=Hola!%20me%20interesa%20la%20piñata!"
-                        class="btn btn-primary">QUIERO CONTACTARME!</a>
+                        class="btn btn-primary">AGREGAR AL CARRITO</a>
                 </div>
             </div>
 
             <div class="card" style="width: 25rem;">
                 <img src="img/guirnalda-m.jpeg" class="card-img-top" style="height: 25rem ;" alt="guirlada">
                 <div class="card-body">
-                    <h5 class="card-title">GUIRNALDAS</h5>
+                    <h5 class="card-title">GUIRNALDAS <br> $2000 </h5>
                     <p class="card-text">Sabemos que parte de la decoración de tu festejo son las guirnaldas. Podes
                         encargar combos combinados con piñata y rosetas, y mucho más! Para más información contáctate
                         con nosotros.</p>
                     <a href="https://wa.me/+5491144074578?text=Hola!%20me%20interesa%20la%20guirnalda!"
-                        class="btn btn-primary">QUIERO CONTACTARME!</a>
+                        class="btn btn-primary">AGREGAR AL CARRITO</a>
                 </div>
             </div>
 
             <div class="card" style="width: 25rem;">
                 <img src="img/roseta-jirafa.jpeg" class="card-img-top" style="height: 25rem ; " alt="roseta">
                 <div class="card-body">
-                    <h5 class="card-title">ROSETAS</h5>
+                    <h5 class="card-title">ROSETAS <br> $2500 </h5>
                     <p class="card-text">Sumale a tu decoracion rosetas, así será súper completa! Opciones de combos de
                         acuerdo a la temática que más te guste. Contacte con nosotros para ayudarte con más información.
                     </p>
                     <a href="https://wa.me/+5491144074578?text=Hola!%20me%20interesa%20la%20roseta!"
-                        class="btn btn-primary">QUIERO CONTACTARME!</a>
+                        class="btn btn-primary">AGREGAR AL CARRITO</a>
                 </div>
             </div>
         </div>
@@ -104,7 +105,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
